--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "bulma": "^0.9.4",
+    "moment": "^2.30.1",
     "ngx-owl-carousel-o": "^16.0.0",
     "rxjs": "~7.8.0",
     "script-loader": "^0.7.2",
